--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -14,8 +14,71 @@
     }
 }
 
-// Использование миксина 
-.class {
-    font-size: 14px;
-    @include line-clamp(3);
+// .class {
+//     font-size: 14px;
+//     @include line-clamp(3);
+// }
+
+@mixin r($width) {
+    @media (max-width: #{$width}px) {
+        @content;
+    }
+}
+
+// 1200 992 768 576 
+
+@mixin burger {
+	width: $burgerWidth; 
+	height: $burgerHeight; 
+	position: relative;
+	color: $burgerColor; 
+
+	&__line {
+		position: absolute;
+		left: 0;
+		top: 50%;
+		transform: translateY(-50%);
+		width: 100%;
+		height: $burgerLineHeight; 
+		background-color: currentColor;
+		transition: transform 0.3s ease-in-out;
+	}
+
+	&::before,
+	&::after {
+		content: "";
+		position: absolute;
+		left: 0;
+		width: 100%;
+		height: $burgerLineHeight;
+		background-color: currentColor;
+		transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+	}
+
+	&::before {
+		top: 0;
+	}
+
+	&::after {
+		top: calc(100% - $burgerLineHeight);
+	}
+
+	&--active {
+		.burger__line {
+			transform: scale(0);
+			transition: transform 0.3s ease-in-out;
+		}
+
+		&::before {
+			transform: rotate(45deg);
+			top: 50%;
+			transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+		}
+
+		&::after {
+			transform: rotate(-45deg);
+			top: 50%;
+			transition: transform 0.3s ease-in-out, top 0.3s ease-in-out;
+		}
+	}
 }
