--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -7,3 +7,9 @@ $dark: #31352b;
 $white: #ffffff;
 $red: #FF2222;
 $blue: #00AAFF;
+
+
+$burgerWidth: 30px;
+$burgerHeight: 20px;
+$burgerLineHeight: 2px;
+$burgerColor: $darkBlue-900;
