--- a/src/module/footer/_footer.scss
+++ b/src/module/footer/_footer.scss
@@ -3,12 +3,20 @@
     &__inner {
         display: flex;
         margin-bottom: 61px;
+        @include r(576) {
+            flex-direction: column;
+        }
     }
 
     &__box {
         margin-right: 70px;
         max-width: 200px;
         flex-shrink: 0;
+
+        @include r(576) {
+            margin-right: 0;
+            margin-bottom: 30px;
+        }
     }
 
     &__logo {
@@ -20,6 +28,12 @@
         display: grid;
         grid-template-columns: repeat(3, auto);
         gap: 15px 90px;
+
+        @include r(576) {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+        }
     }
 
     &__link {
@@ -49,62 +63,14 @@
     }
 }
 
-.form {
-
-    &__label {
-        width: 100%;
-    }
-
-    &__input {
-        width: 100%;
-        margin-bottom: 12px;
-        padding: 13px 15px;
-        font-size: 14px;
-        outline: 1px solid $gray;
-        border-radius: 5px;
-        background-color: $white;
-        transition: color 0.3s, background-color 0.3s, outline-color 0.3s;
-
-        &::placeholder {
-            transition: color 0.3s;
-        }
-
-        &:hover::placeholder {
-            color: $darkBlue-900;
-        }
-
-        &:hover {
-            color: $orange-900;
-            background-color: transparent;
-            outline-color: rgba($orange-900, 0.7);
-        }
-
-        &:focus {
-            color: $orange-900;
-            outline-color: rgba($orange-900, 0.7);
-            background-color: rgba($orange-900, 0.10);
-        }
-
-        &::placeholder {
-            color: $gray;
-        }
-    }
-
-    &__btn {
-        font-weight: 500;
-        padding: 13px 10px;
-        width: 100%;
-        font-size: 14px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-}
-
 .address {
     margin-left: auto;
     margin-right: 80px;
+
+    @include r(576) {
+        margin-left: 0;
+        margin-right: 0;
+    }
 
     &__item {
         margin-bottom: 15px;
@@ -116,6 +82,18 @@
         font-size: 16px;
         line-height: 2;
         white-space: nowrap;
+
+        &:hover {
+            &::before {
+                background-color: $orange-900;
+            }
+        }
+
+        &::before {
+            width: 20px;
+            height: 18px;
+            margin-right: 7px;
+        }
     }
 }
 
@@ -134,8 +112,16 @@
         width: 39px;
         height: 39px;
 
+        &::before {
+            height: 20px;
+        }
+
         &:hover {
             background-color: $orange-900;
+
+            &::before {
+                background-color: $white;
+            }
         }
 
         &:focus {
@@ -145,90 +131,12 @@
 
         &:active {
             background-color: rgba($orange-900, 0.10);
-        }
 
-    }
-
-}
-
-.icon {
-    &--telegram {
-        &::before {
-        mask-image: url('../../images/icons/sprite.svg#icon-telegram');
-        width: 16px;
-        height: 16px;
-        margin-right: 20px;
-        background-color: $white;
-    }
-    &:hover {
-        &::before {
-            background-color: $orange-900;
-        }
-    }
-    }
-
-    &--address {
-        &::before {
-            width: 20px;
-            height: 18px;
-            margin-right: 7px;
-        }
-
-        &:hover {
             &::before {
                 background-color: $orange-900;
             }
         }
+
     }
 
-    &--location {
-        &::before {
-            mask-image: url('../../images/icons/sprite.svg#icon-location');
-        }
-    }
-
-    &--call {
-        &::before {
-            mask-image: url('../../images/icons/sprite.svg#icon-call');
-        }
-    }
-
-    &--message {
-        &::before {
-            mask-image: url('../../images/icons/sprite.svg#icon-message');
-        }
-    }
-
-    &--social {
-        &::before {
-            height: 20px;
-        }
-        &:hover {
-            &::before {
-                background-color: $white;
-            }
-        }
-
-        &:active {
-            &::before {
-                background-color: $orange-900;
-            }
-        }
-    }
-
-    &--facebook {
-        &::before {
-            mask-image: url('../../images/icons/sprite.svg#icon-facebook');
-        }
-    }
-    &--twitter {
-        &::before {
-            mask-image: url('../../images/icons/sprite.svg#icon-twitter');
-        }
-    }
-    &--instagram {
-        &::before {
-            mask-image: url('../../images/icons/sprite.svg#icon-instagram');
-        }
-    }
 }
