--- a/src/module/hero/_hero.scss
+++ b/src/module/hero/_hero.scss
@@ -8,6 +8,23 @@
         background-position: right;
         background-size: contain;
         min-height: 655px;
+        position: relative;
+        z-index: 999;
+
+        @include r(576) {
+            align-items: center;
+            min-height: 300px;
+            &::before {
+                content: "";
+                background-color: rgba(255, 255, 255, 0.85);
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: -1;
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 
     &__content {
@@ -20,21 +37,37 @@
         text-transform: uppercase;
         margin-bottom: 20px;
         color: $darkBlue-900;
+
+        @include r(576) {
+            font-size: 40px;
+        }
     }
 
     &__text {
         max-width: 450px;
         line-height: 1.5;
         margin-bottom: 20px;
+
+        
+        @include r(576) {
+            font-size: 16px;
+            line-height: 1.5;
+        }
     }
 
     &__btn {
         letter-spacing: 0.01em;
         margin-right: 20px;
         font-size: 18px;
+
+        @include r(576) {
+            font-size: 14px;
+            border-radius: 3px;
+        }
     }
 
     &__link {
+
         &:hover::after,
         &:focus::after,
         &:active::after {
