--- a/src/module/restaurant/_restaurant.scss
+++ b/src/module/restaurant/_restaurant.scss
@@ -1,14 +1,21 @@
 .restaurant {
 
-&__title {
-    text-align: center;
-    margin-bottom: 60px;
-}
+    &__title {
+        text-align: center;
+        margin-bottom: 60px;
 
-&__list {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    gap: 30px;
-}
+        @include r(576) {
+            margin-bottom: 30px;
+        }
+    }
 
+    &__list {
+        display: grid;
+        grid-template-columns: repeat(3, auto);
+        gap: 30px;
+
+        @include r(576) {
+            grid-template-columns: repeat(1, auto);
+        }
+    }
 }
