--- a/src/module/restcard/_restcard.scss
+++ b/src/module/restcard/_restcard.scss
@@ -4,6 +4,9 @@
     max-width: 370px;
     background-color: $white;
     border-radius: 10px;
+    @include r(576) {
+        margin-bottom: 30px;
+    }
 
     &:hover {
         background-color: $white;
@@ -33,6 +36,12 @@
     &__time {
         display: flex;
         align-items: center;
+
+        &::before {
+            margin-right: 10px;
+            width: 22px;
+            height: 22px;
+        }
     }
 
     &__btn {
@@ -45,9 +54,15 @@
         width: 79px;
         height: 33px;
 
+        &::before {
+            width: 16px;
+            height: 16px;
+            background-color: $white;
+            transition: transform 0.5s ease-in-out;
+        }
+
         &:hover {
             background-color: transparent;
-
 
             &::before {
                 transition: transform 1s ease-in-out, background-color 0.3s;
@@ -66,25 +81,4 @@
         }
     }
 
-}
-
-.icon {
-    &--time {
-        &::before {
-            margin-right: 10px;
-            width: 22px;
-            height: 22px;
-            mask-image: url('../../images/icons/sprite.svg#icon-time');
-        }
-    }
-
-    &--arrow {
-        &::before {
-            width: 16px;
-            height: 16px;
-            background-color: $white;
-            mask-image: url('../../images/icons/sprite.svg#icon-arrow-right');
-            transition: transform 0.5s ease-in-out;
-        }
-    }
 }
