--- a/src/module/swiperjs/_swiperjs.scss
+++ b/src/module/swiperjs/_swiperjs.scss
@@ -11,33 +11,67 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 20px;
     
     &__btn {
-        width: 50px;
-        height: 50px;
-        background-color: aqua;
-        &--next {
+        border-radius: 50%;
+        border: 3px solid $gray;
+        padding: 8px;
 
+        &::before {
+            display: block;
+            width: 18px;
+            height: 18px;
+            background-color: $gray;
+        }
+        &--next {
+            &::before {
+
+            }
         }
 
         &--prev {
+            &::before {
 
+            }
         }
     }
 
     &__dots {
         display: flex;
-        gap: 10px;
+        gap: 15px;
         justify-content: center;
     }
 
     &__dot {
         border-radius: 50%;
-        width: 20px;
-        height: 20px;
-        background-color: black;
+        width: 15px;
+        height: 15px;
+        background-color: $gray;
         &--active {
-            background-color: red;
+            background-color: $orange-900;
+        }
+    }
+}
+
+.review-slider {
+
+    &__actions {
+
+        @include r(576) {
+            display: flex;
+            justify-content: space-around;
+            width: 100%;
+            position: absolute;
+            top: 30px;
+            z-index: 1;
+            gap: 120px;
+
+        }
+    }
+    &__dots {
+        @include r(576) {
+            display: none;
         }
     }
 }
