--- a/src/module/hero/_hero.scss
+++ b/src/module/hero/_hero.scss
@@ -1,3 +1,9 @@
+@mixin r($width) {
+    @media (max-width: #{$width}px) {
+        @content;
+    }
+}
+
 .hero {
     font-size: 20px;
 
@@ -9,7 +15,7 @@
         background-size: contain;
         min-height: 655px;
         position: relative;
-        z-index: 999;
+        z-index: 1;
 
         @include r(576) {
             align-items: center;
