--- a/src/module/productcard/_productCard.scss
+++ b/src/module/productcard/_productCard.scss
@@ -1,3 +1,9 @@
+@mixin r($width) {
+    @media (max-width: #{$width}px) {
+        @content;
+    }
+}
+
 .product-card {
     font-size: 15px;
     padding: 20px 15px;
