--- a/src/module/productlist/_prosuctlist.scss
+++ b/src/module/productlist/_prosuctlist.scss
@@ -1,3 +1,9 @@
+@mixin r($width) {
+    @media (max-width: #{$width}px) {
+        @content;
+    }
+}
+
 .product-list {
     display: grid;
     grid-template-columns: repeat(5, minmax(0, 1fr));
