--- a/src/module/burgerMenu/_burgerMenu.scss
+++ b/src/module/burgerMenu/_burgerMenu.scss
@@ -1,35 +1,69 @@
 .burger {
-    @include burger;
-    $burgerWidth: 30px;
-    $burgerHeight: 20px;
-    $burgerLineHeight: 2px;
-    $burgerColor: $darkBlue-900;
-    margin-right: 8px;
+  @include burger;
+  $burgerWidth: 30px;
+  $burgerHeight: 20px;
+  $burgerLineHeight: 2px;
+  $burgerColor: $darkBlue-900;
+  margin-right: 8px;
+  display: none;
 
-    @include r(300) {
-        display: none;
-    }
+  @include r(1024) {
+    display: flex;
+  }
+}
+
+.burger__container {
+  padding: 25px 15px;
+}
+
+.burger__logo {
+  margin-bottom: 25px;
+  display: block;
+}
+
+.burger__nav {
+  transform: translateX(-200%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 80vw;
+  height: 100vh;
+  background-color: black;
+  z-index: 9999;
+  transition: transform 0.7s;
+}
+
+.burger__nav--active {
+  transform: translateX(0);
 }
 
 .lock {
-    overflow: hidden;
-    position: relative;
-    &::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      background-color: rgba(0,0,0, 0.5);
-    }
+  overflow: hidden
+}
+
+.burger__list {
+  position: relative;
+  padding: 25px 0;
+  margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    border-bottom: 1px solid red;
+    top: 0;
+    left: 0;
+    width: 100%;
   }
 
-.menu--active {
-    // background-color: red;
-    // position: fixed;
-    // height: 100vh;
-    // width: 80vw;
-    // z-index: 1000;
-    
+  &::after {
+    content: "";
+    position: absolute;
+    border-bottom: 1px solid red;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
 }
