--- a/src/module/categories/_categories.scss
+++ b/src/module/categories/_categories.scss
@@ -10,10 +10,14 @@
         margin-bottom: 45px;
         gap: 20px;
         justify-content: center;
+        padding: 0.5px 0;
 
         @include r(576) {
+            // display: inline-flex;
+            flex-wrap: nowrap;
             gap: 10px;
             margin-bottom: 30px;
+            overflow-y: auto;
         }
     }
 
@@ -25,17 +29,19 @@
         outline: 1px solid $silver-200;
         display: flex;
         align-items: center;
-        word-wrap: nowrap;
+        white-space: nowrap;
         gap: 10px;
 
         @include r(576) {
             font-size: 14px;
             padding: 12px 16px;
+            gap: 5px;
         }
 
         &::before {
             width: 44px;
             height: 44px;
+
             @include r(576) {
                 width: 20px;
                 height: 20px;
@@ -45,6 +51,10 @@
         &--active {
             color: $white;
             background-color: $orange-900;
+
+            &::before {
+                background-color: $white;
+            }
         }
 
         &:hover {
@@ -86,6 +96,12 @@
 
         &:focus::after {
             border-bottom-color: $darkBlue-900;
+        }
+
+        @include r(576) {
+            &::after {
+                bottom: 2px;
+            }
         }
     }
 }
