--- a/src/module/restcard/_restcard.scss
+++ b/src/module/restcard/_restcard.scss
@@ -1,3 +1,9 @@
+@mixin r($width) {
+    @media (max-width: #{$width}px) {
+        @content;
+    }
+}
+
 .rest-card {
     border-radius: 10px 10px 0 0;
     box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.10);
@@ -16,6 +22,7 @@
     &__img {
         object-fit: cover;
         margin-bottom: 15px;
+        border-radius: 10px 0 0 0;
     }
 
     &__box {
