--- a/src/module/swiperjs/_swiperjs.scss
+++ b/src/module/swiperjs/_swiperjs.scss
@@ -1,3 +1,9 @@
+@mixin r($width) {
+    @media (max-width: #{$width}px) {
+        @content;
+    }
+}
+
 .review-slider {
 
     &__actions {
@@ -64,9 +70,9 @@
             width: 100%;
             position: absolute;
             top: 30px;
+            left: 50%;
+            transform: translateX(-50%);
             z-index: 1;
-            gap: 120px;
-
         }
     }
     &__dots {
