--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,7 +14,7 @@
 @import '../module/restaurant/restaurant';
 @import '../module/restcard/restcard';
 @import '../module/review/review';
+@import '../module/reviewCard/reviewCard';
 @import '../module/application/application';
 @import '../module/footer/footer';
-@import '../module/form/form';
 @import '../module/swiperjs/swiperjs';
