--- a/src/module/footer/_footer.scss
+++ b/src/module/footer/_footer.scss
@@ -1,14 +1,9 @@
-@mixin r($width) {
-    @media (max-width: #{$width}px) {
-        @content;
-    }
-}
-
 .footer {
 
     &__inner {
         display: flex;
         margin-bottom: 61px;
+
         @include r(576) {
             flex-direction: column;
         }
@@ -68,6 +63,72 @@
             color: $orange-900;
         }
     }
+}
+
+.form {
+
+    &__label {
+        width: 100%;
+    }
+
+    &__input {
+        width: 100%;
+        margin-bottom: 12px;
+        padding: 13px 15px;
+        font-size: 14px;
+        outline: 1px solid $gray;
+        border-radius: 5px;
+        background-color: $white;
+        transition: color 0.3s, background-color 0.3s, outline-color 0.3s;
+
+        &::placeholder {
+            transition: color 0.3s;
+        }
+
+        &:hover::placeholder {
+            color: $darkBlue-900;
+        }
+
+        &:hover {
+            color: $orange-900;
+            background-color: transparent;
+            outline-color: rgba($orange-900, 0.7);
+        }
+
+        &:focus {
+            color: $orange-900;
+            outline-color: rgba($orange-900, 0.7);
+            background-color: rgba($orange-900, 0.10);
+        }
+
+        &::placeholder {
+            color: $gray;
+        }
+    }
+
+    &__btn {
+        font-weight: 500;
+        padding: 13px 10px;
+        width: 100%;
+        font-size: 14px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        &:hover {
+            &::before {
+                background-color: $orange-900;
+            }
+        }
+
+        &::before {
+            width: 16px;
+            height: 16px;
+            margin-right: 20px;
+            background-color: $white;
+        }
+    }
+
 }
 
 .address {
