--- a/src/module/hero/_hero.scss
+++ b/src/module/hero/_hero.scss
@@ -11,13 +11,13 @@
         position: relative;
         z-index: 1;
 
-        @include r(576) {
-            align-items: center;
-            min-height: 300px;
+        @include r(992) {
+
+            min-height: 455px;
 
             &::before {
                 content: "";
-                background-color: rgba(255, 255, 255, 0.85);
+                background-color: rgba($white, 0.85);
                 position: absolute;
                 top: 0;
                 left: 0;
@@ -25,6 +25,11 @@
                 width: 100%;
                 height: 100%;
             }
+        }
+
+        @include r(576) {
+            align-items: center;
+            min-height: 300px;
         }
     }
 
