--- a/src/module/productcard/_productCard.scss
+++ b/src/module/productcard/_productCard.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    cursor: pointer;
 
     &__item {
         height: 100%;
@@ -32,6 +33,10 @@
         line-height: normal;
         min-height: 37px;
         @include line-clamp(3);
+
+        @include r(576) {
+            @include line-clamp(2);
+        }
     }
 
     &__price {
