--- a/src/module/reviewCard/_reviewCard.scss
+++ b/src/module/reviewCard/_reviewCard.scss
@@ -4,7 +4,7 @@
     align-items: center;
     margin-bottom: 30px;
 
-    @include r(576) {
+    @include r(976) {
         justify-content: center;
         flex-direction: column;
     }
@@ -13,8 +13,11 @@
         border-radius: 50%;
         margin-right: 80px;
 
-        @include r(576) {
+        @include r(976) {
             margin: 0 0 30px 0;
+        }
+
+        @include r(768) {
             width: 100px;
             height: 100px;
         }
@@ -57,7 +60,7 @@
             font-style: italic;
             line-height: 1.5;
 
-            @include r(576) {
+            @include r(768) {
                 font-size: 14px;
                 margin-bottom: 20px;
             }
@@ -70,7 +73,7 @@
         color: $orange-900;
         margin-bottom: 15px;
 
-        @include r(576) {
+        @include r(768) {
             font-size: 16px;
             margin-bottom: 10px;
         }
