--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -183,3 +183,19 @@ body {
     margin-bottom: 10px;
     color: $orange-900;
 }
+
+.lock {
+    overflow: hidden;
+    position: relative;
+
+    &::after {
+        content: '';
+        z-index: 1;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-color: rgba($dark, 0.9);
+    }
+}
