--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,14 +2,10 @@ $bg-color: #f9faff;
 $orange-900: #ff6838;
 $orangeLight: #fff2ed;
 $silver-200: #ececec;
+$grayLight: #eeeff3;
 $gray: #c2c2c2;
 $darkBlue-900: #363853;
 $dark: #31352b;
 $white: #ffffff;
 $red: #FF2222;
 $blue: #00AAFF;
-
-$burgerWidth: 30px;
-$burgerHeight: 20px;
-$burgerLineHeight: 2px;
-$burgerColor: $darkBlue-900;
