--- a/src/module/categories/_categories.scss
+++ b/src/module/categories/_categories.scss
@@ -10,7 +10,7 @@
         margin-bottom: 45px;
         gap: 20px;
         justify-content: center;
-        padding: 0.5px 0.5px;
+        padding: 0.5px 0.5px 5px 0.5px;
 
         @include r(1200) {
             flex-wrap: nowrap;
