--- a/src/module/footer/_footer.scss
+++ b/src/module/footer/_footer.scss
@@ -55,7 +55,8 @@
         line-height: 1.3;
         white-space: nowrap;
         line-break: anywhere;
-
+        display: block;
+        width: 100%;
     }
 
     &__text {
@@ -71,6 +72,10 @@
 
         &:hover {
             color: $orange-900;
+        }
+
+        @include r(768) {
+            padding: 20px 0;
         }
     }
 }
