--- a/src/module/mobileMenu/_mobileMenu.scss
+++ b/src/module/mobileMenu/_mobileMenu.scss
@@ -1,69 +1,105 @@
-.burger {
-  @include burger;
-  $burgerWidth: 30px;
-  $burgerHeight: 20px;
-  $burgerLineHeight: 2px;
-  $burgerColor: $darkBlue-900;
-  margin-right: 8px;
+.mobile-menu {
   display: none;
+
+  &__nav {
+    transform: translateX(-200%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 80vw;
+    height: 100vh;
+    background-color: $white;
+    z-index: 9;
+    transition: transform 0.7s;
+  }
+
+  &__nav--active {
+    transform: translateX(0);
+  }
+
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 25px 15px 15px 15px;
+  }
+
+  &__list {
+    position: relative;
+    padding: 20px 15px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 20px;
+
+    &::before,
+    &::after {
+      content: "";
+      border-bottom: 1px solid $grayLight;
+      position: absolute;
+
+      left: 0;
+      width: 100%;
+    }
+
+    &::before {
+      top: 0;
+    }
+
+    &::after {
+      bottom: 0;
+    }
+  }
+
+  &__item,
+  &__link {
+    display: block;
+    width: 100%;
+  }
+
+
+  &__address {
+    padding: 15px;
+  }
 
   @include r(1024) {
     display: flex;
   }
 }
 
-.burger__container {
-  padding: 25px 15px;
-}
-
-.burger__logo {
-  margin-bottom: 25px;
-  display: block;
-}
-
-.burger__nav {
-  transform: translateX(-200%);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 80vw;
-  height: 100vh;
-  background-color: black;
-  z-index: 9999;
-  transition: transform 0.7s;
-}
-
-.burger__nav--active {
-  transform: translateX(0);
-}
-
-.lock {
-  overflow: hidden
-}
-
-.burger__list {
-  position: relative;
-  padding: 25px 0;
-  margin-bottom: 40px;
+.burger {
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  padding: 9px 7px;
+  outline: 2px solid transparent;
+  transition: background-color 0.3s, color 0.3s, outline-color 0.3s;
 
   &::before {
-    content: "";
-    position: absolute;
-    border-bottom: 1px solid red;
-    top: 0;
-    left: 0;
-    width: 100%;
+    width: 30px;
+    height: 22px;
   }
 
-  &::after {
-    content: "";
-    position: absolute;
-    border-bottom: 1px solid red;
-    bottom: 0;
-    left: 0;
-    width: 100%;
+  &--close {
+    display: flex;
+    padding: 12px;
+  }
+
+  &,
+  &--close {
+    &:hover {
+      background-color: $orange-900;
+
+      &::before {
+        background-color: $white;
+      }
+    }
+
+    &:focus {
+      outline-color: rgba($orange-900, 0.70);
+      background-color: rgba($orange-900, 0.10);
+    }
+
+    &:active {
+      background-color: rgba($orange-900, 0.10);
+    }
   }
 }
