--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,3 +18,12 @@
 @import '../modules/mainPage/application/application';
 @import '../modules/mainPage/footer/footer';
 @import '../modules/swiperjs/swiperjs';
+
+@import '../modules/catalogPage/productCatalog';
+@import '../modules/catalogPage/catalogCategories/catalogCategories';
+@import '../modules/catalogPage/catalogPromo/catalogPromo';
+@import '../modules/catalogPage/catalogPrice/catalogPrice';
+@import '../modules/catalogPage/pagination/paginaion.scss';
+@import '../modules/catalogPage/catalogOffers/catalogOffers';
+@import '../modules/catalogPage/TopFilter/TopFilter.scss';
+@import '../modules/catalogPage/breadcrumbs/breadcrumbs';
