--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,7 @@
 @import '../modules/catalogPage/productCatalog';
 @import '../modules/catalogPage/catalogCategories/catalogCategories';
 @import '../modules/catalogPage/catalogPromo/catalogPromo';
+@import '../modules/catalogPage/catalogPromo/promoCard.scss';
 @import '../modules/catalogPage/catalogPrice/catalogPrice';
 @import '../modules/catalogPage/pagination/paginaion.scss';
 @import '../modules/catalogPage/catalogOffers/catalogOffers';
