--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,5 +1,6 @@
 $bg-color: #f9faff;
 $orange-900: #ff6838;
+$peorpleLight: #ffdace;
 $orangeLight: #fff2ed;
 $silver-200: #ececec;
 $grayLight: #eeeff3;
